--- a/app/src/main/res/layout/activity_launch_screen.xml
+++ b/app/src/main/res/layout/activity_launch_screen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@id/root_view"
@@ -12,7 +13,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/launch_screen_logo"
         android:layout_gravity="center"
+        app:srcCompat="@drawable/launch_screen_logo"
         />
 </FrameLayout>
