--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -44,7 +44,7 @@
             android:id="@+id/empty_image"
             android:layout_width="144dp"
             android:layout_height="144dp"
-            android:src="@drawable/ic_no_works"
+            app:srcCompat="@drawable/ic_no_works"
             />
 
         <TextView
