--- a/app/src/main/res/layout/item_flow.xml
+++ b/app/src/main/res/layout/item_flow.xml
@@ -60,7 +60,7 @@
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/ic_chevron_right"
+                app:srcCompat="@drawable/ic_chevron_right"
                 />
 
         </RelativeLayout>
