--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,77 +5,96 @@
     android:id="@id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimary"
     tools:context=".loginscreen.LoginActivity"
     >
 
     <android.support.v7.widget.Toolbar
         android:id="@id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="124dp"
         android:background="?attr/colorPrimary"
         android:theme="@style/Crs.AppBarOverlay"
         app:popupTheme="@style/Crs.PopupOverlay"
+        android:layout_gravity="top"
+        app:title="Bem-vindo"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display2"
+        app:titleMarginStart="24dp"
+        app:titleMarginTop="64dp"
+        app:titleMarginBottom="8dp"
         />
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:gravity="center"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_gravity="center"
+        app:contentPadding="@dimen/activity_horizontal_margin"
         >
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/cpf_helper"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             >
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/cpf"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/cpf_helper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberSigned"
-                android:selectAllOnFocus="true"
-                android:imeOptions="actionNext"
-                android:hint="CPF"
-                android:drawableLeft="@drawable/ic_account"
-                android:drawableStart="@drawable/ic_account"
-                android:drawablePadding="32dp"
+                android:layout_marginBottom="16dp"
                 >
 
-                <requestFocus />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/cpf"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberSigned"
+                    android:selectAllOnFocus="true"
+                    android:imeOptions="actionNext"
+                    android:hint="CPF"
+                    android:drawablePadding="32dp"
+                    >
 
-            </android.support.design.widget.TextInputEditText>
+                    <requestFocus />
 
-        </android.support.design.widget.TextInputLayout>
+                </android.support.design.widget.TextInputEditText>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/password_helper"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/password"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/password_helper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:selectAllOnFocus="true"
-                android:imeActionId="@integer/entrar"
-                android:imeActionLabel="@string/action_login"
-                android:imeOptions="actionUnspecified"
-                android:hint="Senha"
-                android:drawableLeft="@drawable/ic_key"
-                android:drawableStart="@drawable/ic_key"
-                android:drawablePadding="32dp"
+                android:layout_marginBottom="16dp"
+                >
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:selectAllOnFocus="true"
+                    android:imeActionId="@integer/entrar"
+                    android:imeActionLabel="@string/action_login"
+                    android:imeOptions="actionUnspecified"
+                    android:hint="Senha"
+                    android:drawablePadding="32dp"
+                    />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/button_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_button_login"
+                android:text="@string/action_login"
+                android:textColor="@android:color/white"
                 />
 
-        </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
 
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </FrameLayout>
