--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3f825e</color>
     <color name="colorAccent">#3f825e</color>
     <color name="white">#FFFFFF</color>
+    <color name="accent_pressed">#264e39</color>
     <color name="launchBackground">@color/colorPrimaryDark</color>
     <color name="accentTranslucent">#803f825e</color>
     <color name="blackTranslucent">#20000000</color>
