--- a/app/src/main/res/layout/item_checkin.xml
+++ b/app/src/main/res/layout/item_checkin.xml
@@ -8,15 +8,9 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:elevation="3dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
         app:contentPadding="16dp"
-        app:cardUseCompatPadding="true"
-        app:cardPreventCornerOverlap="false"
         >
 
         <LinearLayout
