--- a/app/src/main/res/layout/item_checkin_order_glass.xml
+++ b/app/src/main/res/layout/item_checkin_order_glass.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        app:contentPadding="16dp"
+        style="@style/Widget.Crs.CardView"
+        android:id="@+id/card_view"
         >
 
         <LinearLayout
