--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,6 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/window_background</item>
-        <item name="selectableItemBackground">@drawable/selector_item_background</item>
     </style>
 
     <style name="Crs.NoActionBar">
@@ -39,6 +38,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">2dp</item>
+        <item name="android:foreground">@drawable/selector_card_view</item>
         <item name="contentPadding">16dp</item>
         <item name="cardUseCompatPadding">true</item>
     </style>
