--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,100 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
+    android:fitsSystemWindows="true"
     tools:context=".loginscreen.LoginActivity"
     >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@id/toolbar"
+    <android.support.design.widget.AppBarLayout
+        android:id="@id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="124dp"
-        android:background="?attr/colorPrimary"
+        android:layout_height="192dp"
         android:theme="@style/Crs.AppBarOverlay"
-        app:popupTheme="@style/Crs.PopupOverlay"
-        android:layout_gravity="top"
-        app:title="Bem-vindo"
-        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display2"
-        app:titleMarginStart="24dp"
-        app:titleMarginTop="64dp"
-        app:titleMarginBottom="8dp"
-        />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:layout_gravity="center"
-        app:contentPadding="@dimen/activity_horizontal_margin"
+        android:fitsSystemWindows="true"
         >
 
-        <LinearLayout
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="64dp"
+            app:title="@string/welcome_title"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             >
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/cpf_helper"
+            <android.support.v7.widget.Toolbar
+                android:id="@id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/Crs.PopupOverlay"
+                app:layout_collapseMode="pin"
+                />
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            app:contentPadding="@dimen/activity_horizontal_margin"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
                 >
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/cpf"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/cpf_helper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="numberSigned"
-                    android:selectAllOnFocus="true"
-                    android:imeOptions="actionNext"
-                    android:hint="CPF"
-                    android:drawablePadding="32dp"
+                    android:layout_marginBottom="16dp"
                     >
 
-                    <requestFocus />
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/cpf"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberSigned"
+                        android:selectAllOnFocus="true"
+                        android:imeOptions="actionNext"
+                        android:hint="CPF"
+                        android:drawablePadding="32dp"
+                        >
 
-                </android.support.design.widget.TextInputEditText>
+                        <requestFocus />
 
-            </android.support.design.widget.TextInputLayout>
+                    </android.support.design.widget.TextInputEditText>
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/password_helper"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                >
+                </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/password"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/password_helper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:selectAllOnFocus="true"
-                    android:imeActionId="@integer/entrar"
-                    android:imeActionLabel="@string/action_login"
-                    android:imeOptions="actionUnspecified"
-                    android:hint="Senha"
-                    android:drawablePadding="32dp"
+                    android:layout_marginBottom="16dp"
+                    >
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:selectAllOnFocus="true"
+                        android:imeActionId="@integer/entrar"
+                        android:imeActionLabel="@string/action_login"
+                        android:imeOptions="actionUnspecified"
+                        android:hint="Senha"
+                        android:drawablePadding="32dp"
+                        />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/button_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_button_login"
+                    android:text="@string/action_login"
+                    android:textColor="@android:color/white"
                     />
 
-            </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/button_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_button_login"
-                android:text="@string/action_login"
-                android:textColor="@android:color/white"
-                />
+        </android.support.v7.widget.CardView>
 
-        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
-    </android.support.v7.widget.CardView>
-
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
