Melhor definição do tamanho da AppBar em tablets e smartphones.

--- a/app/src/main/res/layout/activity_checkin.xml
+++ b/app/src/main/res/layout/activity_checkin.xml
@@ -11,7 +11,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="128dp"
+        android:layout_height="@dimen/checkin_appbar_height"
         android:theme="@style/Crs.AppBarOverlay"
         >
 
@@ -39,8 +39,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:maxLines="1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                    android:maxLines="2"
                     android:ellipsize="end"
                     android:gravity="center_horizontal"
                     tools:text="Liberação para entrega - Obra"
