--- a/app/src/main/res/drawable/bg_launch_screen.xml
+++ b/app/src/main/res/drawable/bg_launch_screen.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#4F9C64"
-        android:centerColor="#3B7B59"
-        android:endColor="#3B7B59"
+        android:startColor="@color/colorPrimary"
+        android:centerColor="@color/colorPrimary"
+        android:endColor="@color/colorPrimary"
         android:type="linear"
         android:angle="135"
         />
